# crowler

./: .dir-locals.el  .dumbjump  .gitignore  .nimfmt.cfg  Dockerfile  ERRATA.org  LICENSE.md  Pipfile  README.org  TODO.org  data  index.html  index.test.html  main.nim  nim.cfg  nim.cfg.release  nim.nimble  nim.rootConfig  package-lock.json  package.json  pyrightconfig.json  requirements-dev.txt  requirements.git.txt  requirements.txt  requirements2.txt  site  site.nim.cfg  site.nimble  vite.config.js  vpsg.nimble  webpack.config.js
config/: dev.toml  misc.toml  sites.json  sites.toml  supervisor.conf  supervisord_sites_tasks.conf
data/: blacklist.txt  test-gost.sh
data_blogmal/: proxies
lib/: libleveldb.so.1.23.0  py
scripts/: build.sh  color-palette.py  compile.sh  copy.sh  cssconfig.sh  docker.sh  healthcheck.sh  init.sh  job.sh  newsite.sh  pack.sh  packdata.sh  pb.sh  post-backup  pre-backup  proxy.py  proxyfinder.sh  run.sh  scraper.sh  site.sh  sites-monitor  sites-monitor.tmux.conf  start.sh  supc.sh  supervisor.conf  switchdata.sh  switchdebug.sh  switchsite.sh  valgrind.sh
src/: articles.py  articles_sources.py  config.py  contents.py  find_feeds.py  find_sources.py  main.py  nim.cfg  proxies.py  proxycheck.py  results.json  sources.py  tagging.py  test  test.nim  utils.py
src/rust/: Cargo.toml  minify_html_c.h
src/rust/.cargo/: config.toml
src/rust/minify-html/: Cargo.toml  rust-toolchain.toml
src/rust/minify-html/src/: main.rs
src/rust/sonic-bindings/: Cargo.toml  nbind.sh
src/rust/sonic-bindings/src/: main.rs
tests/: articles.nim  (+24 more)
(+177 files in other folders)
