[package]
name = "minify_html_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minify-html = { version = ">=0.8.0", features = ["js-esbuild"] }
# mimalloc = { version = "*", default-features = false }
# minify-html = { version = ">=0.8.0" }
# esbuild-rs = ">=0.13.8"

[lib]
crate-type = ["staticlib"]
name = "minify_html_c"
path = "src/main.rs"

